--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"format": "prettier --write .",
-		"lint": "eslint . --ext .js,.jsx --fix"
+		"lint": "eslint . --ext .js,.jsx --fix",
+		"server": "json-server ./user.json -p 4000"
 	},
 	"dependencies": {
 		"react": "17.0.2",
@@ -22,6 +23,7 @@
 		"eslint-plugin-promise": "6.0.0",
 		"eslint-plugin-react": "7.30.1",
 		"eslint-plugin-react-hooks": "4.6.0",
+		"json-server": "0.17.0",
 		"prettier": "2.7.1",
 		"vite": "3.0.9"
 	}
